# simply-simplify-language-glossarizer

./: .gitignore  README.md  pyproject.toml
_streamlit_glossarizer/: .env_example  from_file.py  from_text.py  from_url.py  home.py  utils_glossary.py  utils_prompts_glossary.py
