[project]
name = "glossarizer"
version = "0.2.0"
description = 'Create Plain Language glossaries from texts, URLs, and files using LLMs.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
  { name = "Statistisches Amt, Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
]

dependencies = [
    "openai>=2.29.0",
    "pandas>=2.2.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "xlsxwriter>=3.2.9",
]

[tool.uv]
exclude-newer = "7 days"